--- a/class11_new/Lecture11.html
+++ b/class11_new/Lecture11.html
@@ -138,6 +138,12 @@ percent </code></pre>
 ##               Other        Multi Method 
 ##          0.17006317          0.08788979</code></pre>
 </div>
+<div id="section-3-introduction-to-bio3d-in-r" class="section level2">
+<h2>Section 3: Introduction to Bio3D in R</h2>
+</div>
+<div id="section-3.1" class="section level1">
+<h1>Section 3.1</h1>
+</div>
 
 
 
